/**
 * Copyright 2017 Ambud Sharma
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 * 		http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.srotya.minuteman.rocksdb.rpc";
option optimize_for = SPEED;

package rpcs;

service RocksService {

	rpc Put (PutRequest) returns (GenericResponse) {}
	
	rpc Get (GetRequest) returns (GetResponse) {}
	
	rpc Delete (DeleteRequest) returns (GenericResponse) {}

}

message DeleteRequest {

	repeated string keys = 1;

}

message PutRequest {

	repeated KeyValuePair kvPairs = 1;
	bool delete = 2;

}

message GetRequest {

	repeated string keys = 1;

}

message GetResponse {

	repeated KeyValuePair kvPairs = 1;

}

message KeyValuePair {

	string key = 1;
	bytes value = 2;

}

message GenericResponse {

	int32 responseCode = 1;

}